{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 516,
  "lineage": "313f1fcd-8f2c-b490-0698-271d66f56061",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:680777440142:subnet/subnet-0a9510e5c2134e397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0a9510e5c2134e397",
            "map_public_ip_on_launch": false,
            "owner_id": "680777440142",
            "vpc_id": "vpc-01e2a3ae01f8408f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:680777440142:subnet/subnet-0be1b9ff683eb3336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0be1b9ff683eb3336",
            "map_public_ip_on_launch": false,
            "owner_id": "680777440142",
            "vpc_id": "vpc-01e2a3ae01f8408f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:680777440142:vpc/vpc-01e2a3ae01f8408f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0f22e12ca3c4b2410",
            "default_route_table_id": "rtb-0d70dd1819e88c18c",
            "default_security_group_id": "sg-05a1372c7a878cf65",
            "dhcp_options_id": "dopt-84258afc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01e2a3ae01f8408f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d70dd1819e88c18c",
            "owner_id": "680777440142"
          }
        }
      ]
    }
  ]
}